--- a/src/styles/counter.scss
+++ b/src/styles/counter.scss
@@ -1,19 +1,26 @@
 .counter {
   margin: 0.2rem;
+  flex-wrap: wrap;
+  background: #272727;
+  color: #fff;
+  justify-content: center;
+  margin-right: 0;
 
     h2 {
-    background: #272727;
-    color: #fff;
+    
     padding: 1.5rem;
 
     font: 2rem 'Roboto', sans-serif;
+    text-align: center;
   }
 
-  P {
-    background: #272727;
-    color: #fff;
-    
+  p {
     font: 1rem 'Open Sans', sans-serif;
     padding-bottom: 0.9rem;
   }
+}
+
+.contador {
+  display: flex;
+  margin: auto;
 }
