--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,3 +1,4 @@
+.header {
 img {
   display: flex;
   margin: 2rem auto 0 auto;
@@ -19,7 +20,4 @@ p {
   text-align: center;
   font: 600 1.8rem 'Open Sans', sans-serif;
 }
-.contador {
-  display: flex;
-  margin: auto;
 }
