--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -1,15 +1,36 @@
 .card {
   display: flex;
   margin: auto 0.5rem;
+  
+    .quadro {
+      width: 920px;
+      height: 400px;
+      object-fit: contain;
+      }
+    .cardInfo {
+      display: flex;
+      flex-wrap: wrap;
+      padding:1rem;
+      margin: 1rem;
+
+      .info{
+        width: 256px;
+        height: 266px;
+        margin: 1rem;
+        justify-content: center;
+        justify-items: center;
+
+        }
+    }
+    
     .camisa {
       width: 330px;
       height: 400px;
       object-fit: cover;
     }
-
-    .quadro {
-      width: 920px;
-      height: 600px;
-      object-fit: cover;
-    }
+    
+}
+aside {
+  background: #E1E7E7;
+  width: 65%;
 }
