Finalizado layout do projeto

--- a/src/styles/sectionOne.scss
+++ b/src/styles/sectionOne.scss
@@ -3,6 +3,10 @@
   margin: auto;
   margin-top: 2.9rem;
   align-items: center;
+
+    .contador {
+      text-align: center;
+    }
   
  
   .form {
