--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -1,26 +1,47 @@
+.contentQuadro {
+  display: flex;
+}
 .card {
   display: flex;
   margin: auto 0.5rem;
+  justify-content: center;
+  align-items: center;
+
   
     .quadro {
-      width: 920px;
-      height: 400px;
-      object-fit: contain;
+      width: 70%;
+      height: calc(100vh - 70%);
+      object-fit: cover;
+
       }
     .cardInfo {
       display: flex;
       flex-wrap: wrap;
       padding:1rem;
       margin: 1rem;
+      justify-content: center;
+      align-items: center;
 
       .info{
         width: 256px;
         height: 266px;
-        margin: 1rem;
+        margin: 0 1rem 2rem 1rem;
         justify-content: center;
         justify-items: center;
 
         }
+
+      .quadroTitulo {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 2rem;
+      }
+      p {
+        display: block;
+        font: bold 3rem 'Roboto', sans-serif;
+        text-align: center;
+        border: solid 1px;
+      }
     }
     
     .camisa {
@@ -32,5 +53,12 @@
 }
 aside {
   background: #E1E7E7;
-  width: 65%;
+  max-width: 65%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
+.cardQuadro {
+  max-width: 60%;
 }
