atualizando card de promoção

--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -6,6 +6,8 @@
   margin: auto 0.5rem;
   justify-content: center;
   align-items: center;
+  position: relative;
+  z-index: 0;
 
   
     .quadro {
