ajuste no estilo

--- a/src/styles/sectionOne.scss
+++ b/src/styles/sectionOne.scss
@@ -3,6 +3,7 @@
   margin: auto;
   margin-top: 2.9rem;
   align-items: center;
+  height: calc(100vh - 50%);
 
     .contador {
       text-align: center;
