--- a/src/styles/sectionTwo.scss
+++ b/src/styles/sectionTwo.scss
@@ -8,13 +8,15 @@
 
 .tituloSection {
     text-align: center;
-    
+    background: #272727;
     h2 {
       padding: 0.5rem;
       margin-top: 1rem;
+      font-size: 3rem;
     }
 
     p{
       padding: 0 0.5rem 1.5rem 0.5rem ;
+      font-size: 1.5rem;
     }
 }
