--- a/src/styles/sectionOne.scss
+++ b/src/styles/sectionOne.scss
@@ -1,37 +1,31 @@
 .content {
-  display:flex;
+  display: flex;
+  padding: 2rem;
   margin: auto;
-  margin-top: 2.9rem;
-  align-items: center;
-  height: calc(100vh - 50%);
-
-    .contador {
-      text-align: center;
-    }
+  justify-content: center;
   
- 
-  .form {
+    img {
+      display: flex;
+      width: 50%;
+      margin: auto;
+      border-right: 2px solid ;
+      padding-right: 10rem;
+      height: 100px;
+      float: right;
     
-    margin-right: auto;
-
-    h2 {
-      text-align: left;
     }
 
-    span {
-      display: block;
-    }
+  .form {
+     width: 50%;
+     padding-left: 10rem;
+
+      h2 {
+        text-align: left;
+      }
+
+      span {
+        display: block;
+      }
   }
 }
 
-.box {
-  width: 2%;
-  float: left;
-  height: 150px;
-  margin-left: 1%;
- }
- 
- .linha-vertical {
-  border-left: 2px solid;
-  box-sizing: border-box;
- }
