--- a/src/styles/sectionTwo.scss
+++ b/src/styles/sectionTwo.scss
@@ -1,22 +1,25 @@
-.contentSectionTwo{
-  display: flex;
-  padding: 2rem;
-  margin: auto;
-  justify-content: center;
-  background: #272727;
-}
+    .sectionTwo {
+      background: #272727;
 
-.tituloSection {
-    text-align: center;
-    background: #272727;
-    h2 {
-      padding: 0.5rem;
-      margin-top: 1rem;
-      font-size: 3rem;
-    }
+        .contentSectionTwo{
+          display: flex;
+          padding: 2rem;
+          margin: auto;
+          justify-content: center;
+        }
 
-    p{
-      padding: 0 0.5rem 1.5rem 0.5rem ;
-      font-size: 1.5rem;
-    }
-}
+        .tituloSection {
+            text-align: center;
+        
+            h2 {
+              padding: 0.5rem;
+              margin-top: 1rem;
+              font-size: 3rem;
+            }
+
+            p{
+              padding: 0 0.5rem 1.5rem 0.5rem ;
+              font-size: 1.5rem;
+            }
+        }
+  }
